# rosa_packages_services_ExpressService

./: README.MD  appVersionConfig.gradle  build.gradle  config.gradle  express-design.md  express-integration.md  express-user-guide.md  mini-express-resource-spec.md  settings.gradle
app/: build.gradle  proguard-rules.pro  rose.keystore
app/src/main/: AndroidManifest.xml
express-protos/: build.gradle  proguard-rules.pro
express-protos/src/main/: AndroidManifest.xml
express-protos/src/main/proto/: Express.proto  ProgressExpress.proto
express-sdk/: README.md  build.gradle
express-sdk/src/main/: AndroidManifest.xml
express-test/: build.gradle
express-test/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
mini/circle-progress-drawable/: build.gradle
mini/circle-progress-drawable/src/main/: AndroidManifest.xml
mini/eye-track-drawable/: build.gradle
mini/eye-track-drawable/src/main/: AndroidManifest.xml
mini/gif-drawable/: README.md  build.gradle  gradle-mvn-push.gradle  gradle.properties
mini/gif-drawable/src/main/: AndroidManifest.xml
mini/gif-drawable/src/main/c/: CMakeLists.txt  bitmap.c  control.c  decoding.c  dispose.c  drawing.c  exception.c  gif.c  gif.h  init.c  jni.c  memset.arm.S  metadata.c  opengl.c  surface.c  time.c
mini/gif-drawable/src/main/c/giflib/: dgif_lib.c  gif_lib.h  gifalloc.c  openbsd-reallocarray.c
mini/lottie-drawable/: README.md  build.gradle  gradle-mvn-push.gradle  gradle.properties
mini/mini-spi/: build.gradle
mini/mini-spi/src/main/: AndroidManifest.xml
(+133 files in other folders)
